Fri Apr 11 12:02:30 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): set base address
	  which is retrived from dladdr to dladdr_fbases, to skip already
	  parsed objects.

Fri Apr 11 12:44:50 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_reject): may be turned into a shared array during
	  the given block.  [ruby-dev:48101] [Bug #9727]

Thu Apr 10 23:41:21 2014  Akinori MUSHA  <knu@iDaemons.org>

	* lib/net/ftp.rb (Net::FTP#login): [DOC] The default password for
	  anonymous login was changed to "anonymous@" in r25313.

Thu Apr 10 19:22:58 2014  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_array.rb: remove useless `assert'.

Thu Apr 10 19:11:11 2014  Koichi Sasada  <ko1@atdot.net>

	* array.c (rb_ary_modify): remember shared array owner if a shared
	  array owner is promoted and a shared array is not promoted.

	  Now, shared array is WB-unprotected so that shared arrays are not
	  promoted.  All objects referred from shared array should be marked
	  correctly.

	  [ruby-core:61919] [ruby-trunk - Bug #9718]

	* test/ruby/test_array.rb: add a test for above.

Thu Apr 10 18:57:12 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_verify_internal_consistency): move lines and enable
	  allrefs_dump() on RGENGC_CHECK_MODE >= 4.

Thu Apr 10 15:01:06 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (append_obj): clear allocated memory.

	* addr2line.c (rb_dump_backtrace_with_lines): free `base_addrs'.

Thu Apr 10 14:40:18 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_writebarrier_unprotect_promoted): disable to dump debug
	  message when RGENGC_CHECK_MODE == 0.

Thu Apr 10 08:13:47 2014  Tanaka Akira  <akr@fsij.org>

	* signal.c (check_stack_overflow): Don't use ucontext_t if ucontext.h
	  is not available.
	  Fixes build on Android (x86).

Wed Apr  9 23:22:44 2014  Tanaka Akira  <akr@fsij.org>

	* gc.c (mark_current_machine_context): Call SET_STACK_END.
	  This reverts a hunk of r40703 by ko1.